--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
    "name": "resume-builder",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.244.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
-  }
+   "private": true,
+   "version": "0.0.0",
+   "type": "module",
+   "scripts": {
+      "dev": "vite",
+      "build": "tsc && vite build",
+      "preview": "vite preview"
+   },
+   "dependencies": {
+      "html2canvas": "^1.4.1",
+      "jspdf": "^3.0.2",
+      "lucide-react": "^0.244.0",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1"
+   },
+   "devDependencies": {
+      "@types/react": "^18.3.24",
+      "@types/react-dom": "^18.3.7",
+      "@vitejs/plugin-react": "^4.0.0",
+      "autoprefixer": "^10.4.14",
+      "postcss": "^8.4.24",
+      "tailwindcss": "^3.3.2",
+      "typescript": "^5.0.2",
+      "vite": "^7.1.4"
+   }
 }
- 
